--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
         <artifactId>jackson-databind</artifactId>
         <version>2.11.1</version>
     </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
